V2.0 Bugfix for record/playback of avro messages ; upgrade to latest kotlin ; convert to junit-jupiter test