@@ -1,19 +1,26 @@
-buildscript {
-    ext.kotlin_version = '1.3.31'
-    repositories {
-        mavenCentral()
-        jcenter()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
-    }
+plugins {
+    id("org.jetbrains.kotlin.jvm") version "$kotlinVersion"
+    id("org.jetbrains.kotlin.plugin.serialization") version "$kotlinVersion"
+    id("application")
+    id("com.github.johnrengelman.shadow") version "5.2.0"
+    id("com.adarshr.test-logger") version "2.1.1"
 }
 
-apply plugin: "java"
-apply plugin: "kotlin"
-apply plugin: "kotlinx-serialization"
-apply plugin: "application"
+ext {
+    commonsCodecVersion = "1.15"
+    kafkaVersion = "2.5.1"
+
+    kotlinVersion = "1.4.21"
+    kotlinxCoroutinesVersion = "1.4.2"
+    kotlinxSerializationVersion = "1.0.0"
+    kotestVersion = "4.3.1"
+
+    jupiterVersion = "5.7.0"
+
+    picocliVersion = "4.6.1"
+
+    slf4jVersion = "1.7.30"
+}
 
 group = "com.nordstrom.kafka.kcr"
 
@@ -24,23 +31,36 @@ sourceSets {
 }
 
 repositories {
-    mavenCentral()
     jcenter()
-    maven { url "https://kotlin.bintray.com/kotlinx" }
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile "org.apache.kafka:kafka-clients:2.2.0"
-    compile "org.slf4j:slf4j-simple:1.7.9"
-    compile "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.11.0"
+    // Align versions of all Kotlin components
+    implementation platform('org.jetbrains.kotlin:kotlin-bom')
 
-    compile "com.github.ajalt:clikt:1.7.0"
-    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1"
+    // Use the Kotlin JDK standard libraries
+    implementation("org.jetbrains.kotlin:kotlin-stdlib")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinxCoroutinesVersion")
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-core:$kotlinxSerializationVersion")
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:$kotlinxSerializationVersion")
 
-    compile "io.micrometer:micrometer-registry-statsd:latest.release"
-    compile "io.micrometer:micrometer-registry-jmx:latest.release"
-    testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+    // Application dependencies
+//    implementation("info.picocli:picocli:$picocliVersion")
+    implementation("org.slf4j:slf4j-api:$slf4jVersion")
+    implementation("org.slf4j:slf4j-simple:$slf4jVersion")
+    implementation("org.apache.kafka:kafka-clients:$kafkaVersion")
+    implementation("com.github.ajalt:clikt:1.7.0")
+    implementation("io.micrometer:micrometer-registry-statsd:latest.release")
+    implementation("io.micrometer:micrometer-registry-jmx:latest.release")
+    implementation("commons-codec:commons-codec:$commonsCodecVersion")
+
+    // Test
+    testImplementation("org.jetbrains.kotlin:kotlin-test")
+    testImplementation("io.kotest:kotest-assertions-core-jvm:$kotestVersion")
+    testImplementation("io.kotest:kotest-runner-junit5-jvm:$kotestVersion")
+    testImplementation("org.junit.jupiter:junit-jupiter-api:${jupiterVersion}")
+    testRuntimeOnly("org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${jupiterVersion}")
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
@@ -52,38 +72,13 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
 }
 test {
     useJUnitPlatform()
-}
 
-dependencies {
-    testImplementation 'io.kotlintest:kotlintest-runner-junit5:3.3.2'
-}
+    dependsOn("cleanTest")
+    apply plugin: "com.adarshr.test-logger"
 
-//test.testClassesDir = project.tasks.compileTestKotlin.destinationDir
-//
-//task wrapper(type: Wrapper) {
-//    gradleVersion="5.4"
-//}
-
-ext {
-    moduleName = 'com.nordstrom.kafka.kcr'
-    moduleLaunchPoint = mainClassName
-}
-task jlink(type: Exec, dependsOn: ['clean', 'jar']) {
-    def javaHome = System.properties.'java.home'
-
-    workingDir 'build'
-
-    commandLine "${javaHome}/bin/jlink",
-            '--module-path', "libs${File.pathSeparatorChar}${javaHome}/jmods",
-            '--strip-debug', '--no-header-files', '--no-man-pages', '--compress', '2',
-            '--add-modules', "${moduleName}",
-            '--launcher', "launch=${moduleName}/${moduleLaunchPoint}",
-            '--output', 'dist'
-}
-
-jar {
-    manifest {
-        attributes 'Main-Class': mainClassName
+    testlogger {
+        theme("mocha-parallel")
+        showExceptions(true)
+        showStandardStreams(true)
     }
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
 }
